# InvestigatorAI

./: .gitignore  AGENT_PROMPTS.md  CERTIFICATION_CHALLENGE.md  CONTAINERS.md  DATA_DICTIONARY.md  DEMO_GUIDE.md  Investigation_Report_Global_Trading_LLC_75000USD_INV_20250730_190748_9a07_20250730_190908.txt  MERGE.md  PROMPTS.md  README.md  api_config_template.env  clear_all_cache.py  config.env.template  create_clean_notebook.py  deliverables.md  docker-compose.yml  eval_data_9. Ensemble (ALL Combined).csv  get_additional_data.py  get_data.py  get_text_data.py  investigator_ai_agent_evaluation.ipynb  investigator_ai_deprecated.ipynb  investigator_ai_enhanced_notebook.ipynb  investigator_ai_ragas_evaluation.ipynb  pyproject.toml  rebuild_vector_database.py  test_api.py
api/: Dockerfile  README.md  __init__.py  main.py
api/agents/: __init__.py  multi_agent_system.py  tools.py
api/core/: __init__.py  config.py
api/models/: schemas.py
api/services/: __init__.py  cache_service.py  config_service.py  document_processor.py  external_apis.py  vector_store.py
data/: README.md  bsa_filing_requirements_20250729.json  exchange_rates_20250729_2133.json  exchange_rates_20250729_2326.json  exchange_rates_20250729_2334.json  fatf_jurisdictions_20250729.json  fincen_advisories_20250729.json  fincen_gto_orders_20250729.json  world_bank_country_risk_20250729.csv
data/additional_sources/fatf/: risk_indicators_20250729.json
data/configs/: exchange_rates_20250729_2328.json  exchange_rates_20250731_1954.json
data/fraud_knowledge_base/: INDEX.txt  additional_fatf_risk_data_20250729.txt  additional_github_data_20250729.txt  additional_international_docs_20250729.txt  fatf_risk_indicators_20250729.txt  federal_guidance_FDIC_Suspicious_Activity_Report_Form.txt  federal_guidance_Federal_Reserve_SAR_Requirements.txt  federal_guidance_IRS_SAR_for_Money_Services_Businesses.txt  ffiec_examination_manual_FFIEC_BSAAML_Manual_-_Customer_Due_Diligence.txt  financial_exchange_rates_20250729_2326.txt  financial_exchange_rates_20250729_2328.txt  financial_exchange_rates_20250729_2334.txt  financial_exchange_rates_current.txt  fincen_advisories_FinCEN_Human_Trafficking_Advisory_2020.txt  fincen_advisories_FinCEN_SAR_Activity_Review_-_Issue_22.txt  fincen_advisories_FinCEN_SAR_Filing_Instructions.txt  github_amlsim_accounts_csv_20250729.txt  github_amlsim_alertPatterns_csv_20250729.txt  github_swift_samples_MT103_xml_20250729.txt  international_country_risk_current.txt  regulatory_fatf_jurisdictions_current.txt  regulatory_fincen_advisories_20250729.txt  regulatory_fincen_advisories_current.txt  regulatory_ofac_sdn_list_20250729.txt
data/scripts/: get_additional_data.py
deploy/: README.md
deploy/scripts/: start-docker-deployment.sh  stop-docker-deployment.sh
docs/: ADVANCED_RETRIEVERS.md  AGENT_PROMPTS.md  BUSINESS_CASE.md  CERTIFICATION_CHALLENGE.md  DEMO_GUIDE.md  deliverables.md
frontend/: Dockerfile  README.md  next.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/help/: page.tsx
frontend/src/app/tools/: page.tsx
frontend/src/components/: DocumentSearch.tsx  ExchangeRate.tsx  Header.tsx  HealthStatus.tsx  InvestigationForm.tsx  InvestigationResults.tsx
scripts/: Dockerfile.init  init_vector_database.py  start-containers.sh  test-containers.py
tests/: README.md  README_LANGSMITH_TESTS.md  run_langsmith_tests.py  test_api.py  test_langsmith_api_tracing.py  test_langsmith_integration.py
