[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investigator-ai"
version = "0.1.0"
description = "A comprehensive fraud investigation tool that aggregates data from legitimate public sources"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "InvestigatorAI Team"}
]
license = {file = "LICENSE"}
keywords = ["fraud", "investigation", "data", "analysis", "compliance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Legal Industry", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "kaggle>=1.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ai-makerspace/InvestigatorAI"
Repository = "https://github.com/ai-makerspace/InvestigatorAI"
Issues = "https://github.com/ai-makerspace/InvestigatorAI/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["investigator_ai*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=investigator_ai --cov-report=html --cov-report=term-missing"
